--- a/TP1_memoryGame/app/src/main/AndroidManifest.xml
+++ b/TP1_memoryGame/app/src/main/AndroidManifest.xml
@@ -16,6 +16,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".UserSettingActivity"
+            android:label="@string/title_userSettingActivity">
+            </activity>
+        <activity
+            android:name=".ScoresActivity"
+            android:label="Best Scores">
+
+            </activity>
+
     </application>
 
 </manifest>
