--- a/MyMemoryGame/app/src/main/AndroidManifest.xml
+++ b/MyMemoryGame/app/src/main/AndroidManifest.xml
@@ -1,34 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.memorygame.example.zoe.tp1_memorygame" >
+    package="com.mymemorygame.example.zoe.mymemorygame" >
 
+    <uses-sdk
+        android:minSdkVersion="10"
+        android:targetSdkVersion="12"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:configChanges="orientation">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".UserSettingActivity"
-            android:label="@string/title_userSettingActivity">
-            </activity>
-        <activity
-            android:name=".ScoresActivity"
-            android:label="Best Scores">
-
-            </activity>
-        <activity android:name=".GamePlaying"
-            android:label="Memory Game">
-            </activity>
-
     </application>
 
 </manifest>
