--- a/TP1_memoryGame/app/src/main/AndroidManifest.xml
+++ b/TP1_memoryGame/app/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.memorygame.example.zoe.tp1_memorygame" >
 
+    <uses-sdk
+        android:minSdkVersion="10"
+        android:targetSdkVersion="12"/>
     <application
+        android:name=".AgentApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -17,16 +21,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".UserSettingActivity"
+            android:name=".GameActivity"
             android:label="@string/title_userSettingActivity">
-            </activity>
-        <activity
-            android:name=".ScoresActivity"
-            android:label="Best Scores">
-
-            </activity>
-        <activity android:name=".GamePlaying"
-            android:label="Memory Game">
             </activity>
 
     </application>
