--- a/TP1_memoryGame/app/src/main/AndroidManifest.xml
+++ b/TP1_memoryGame/app/src/main/AndroidManifest.xml
@@ -13,16 +13,17 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".GameActivity"
-            android:label="@string/title_userSettingActivity">
+            android:label="@string/title_userSettingActivity"
+            android:screenOrientation="portrait">
             </activity>
 
     </application>
