--- a/TP1_memoryGame/app/src/main/AndroidManifest.xml
+++ b/TP1_memoryGame/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
+            android:icon="@drawable/logo"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +24,7 @@
         <activity
             android:name=".GameActivity"
             android:label="@string/title_userSettingActivity"
+            android:icon="@drawable/logo"
             android:screenOrientation="portrait">
             </activity>
 
