--- a/TP2_LocalisationMap/app/src/main/AndroidManifest.xml
+++ b/TP2_LocalisationMap/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <uses-library android:name="com.google.android.maps" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -29,7 +30,6 @@
         <activity
             android:name=".MenuActivity"
             android:label="@string/title_activity_menu" >
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -39,7 +39,6 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" >
-
         </activity>
 
         <service
@@ -47,6 +46,11 @@
             android:enabled="true"
             android:exported="true" >
         </service>
+
+        <activity
+            android:name=".FromToActivity"
+            android:label="@string/title_activity_from_to" >
+        </activity>
     </application>
 
 </manifest>
