--- a/TP2_LocalisationMap/app/src/main/AndroidManifest.xml
+++ b/TP2_LocalisationMap/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <!--
  The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but are recommended.
@@ -36,7 +37,7 @@
 
 
         <activity
-            android:name=".MenuActivity"
+            android:name=".ui.MenuActivity"
             android:label="@string/title_activity_menu"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -46,7 +47,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MapsActivity"
+            android:name=".ui.MapsActivity"
             android:label="@string/title_activity_maps"
             android:screenOrientation="portrait">
         </activity>
